Version 1.1.4
-fixed addon description
-fixed minor bug in listing Programs

Version 1.1.5
-fixed bugs when automatically switching between list and thumbnail mode
-fixed minor bug in name listing

Version 1.1.6
-cleaned up some bits of code

Version 1.2.0
-Removed the extra "Play Video" button before loading video.
-All live streams now play in HD

Version 1.2.1
-Fixed the previous page button (It now calls the Action(Back) function instead of adding another directory.)
-Added optional tags.
-Added settings for quality of live streams and a option to disable thumbnail view.

Version 1.2.2
-Fixed a error with the settings not loading correctly after updating to frodo 12.2

Version 1.2.3
-Updated live video streams after changes on tbn's website

Version 1.2.4
-Changed the way the title of videos are formated.

Version 1.2.5
-Removed "Live" quality settings. Low quality streams have been discontinued.